--- a/vtunsite/ChangeLog
+++ b/vtunsite/ChangeLog
@@ -1,3 +1,8 @@
+3.0.2:
+	ref1685781 - vtun3 client should parse vtun2 server encr directives (hch)
+	rfe1744575 - cfg_file.y bugs (mf)
+	rfe1738167 - build on c5 still fails (bc)
+
 3.0.1:
 	rfe1602625 - fix build for lzo2 (bc,db,ruzsi)
 	rfe780607 - new debian rc scripts (surgo)
