--- a/vtunsite/ChangeLog
+++ b/vtunsite/ChangeLog
@@ -1,5 +1,19 @@
+3.0.3:
+	rfe2636157 - Delayed UDP connection (dv)
+	rfe2149137 - makefile ignores LDFLAGS (sbk)
+	rfe2405993 - mem leak in config parser (frY)
+	rfe1685781 - vtun3 server should offer vtun2-compatible encryption (if)
+	pat3540779 - Parallel make Makefile.in race condition (pb)
+	pat2972369 - link timeout in UDP mode (Eugene Berdnikov - deb339364)
+ 	             Minor fixes in lfd_lzo.c to ensure correct type casting
+ 	             Add description of "keepalive timeout:count;" syntax
+	              to man page and vtund.conf sample.
+ 	             Remove doubled if(send_a_file){...} block in linkfd.c.
+	pat2951972 - reduce connection chatter
+	rfe2711212 - improve linking on rebuilds (hmld)
+	
 3.0.2:
-	ref1685781 - vtun3 client should parse vtun2 server encr directives (hch)
+	rfe1685781 - vtun3 client should parse vtun2 server encr directives (hch)
 	rfe1744575 - cfg_file.y bugs (mf)
 	rfe1738167 - build on c5 still fails (bc)
 
@@ -69,7 +83,7 @@ ver 2.5:
 	 Fixes to support both Linux TUN/TAP drivers.
 
 ver 2.5b1:
-	 Encryption fixes: improved challenge generation, padding check.
+	 Encryption fixes: improved challenge generation (jy), padding check.
 	 Config parser fixes. Don't allow empty passwords.
 	 New config option to specify syslog logging facility.
 	 Support for new Linux TUN/TAP driver.
