--- a/vtund.8
+++ b/vtund.8
@@ -1,5 +1,5 @@
 .\" Manual page for vtund
-.\" vtund.8,v 1.4.2.3.2.2 2006/11/16 04:03:59 mtbishop Exp
+.\" $Id: vtund.8,v 1.6.2.3 2016/09/17 20:01:21 mtbishop Exp $
 .\" SH section heading
 .\" SS subsection heading
 .\" LP paragraph
@@ -35,6 +35,9 @@ vtund \- VTun(Virtual Tunnel) daemon.
 ]
 [ 
 .I -p 
+]
+[ 
+.I -q 
 ]
 [ 
 .I -m 
@@ -74,11 +77,11 @@ Read config information from the
 (full path required). By default vtund uses /etc/vtund.conf
 .TP
 .I -n 
-Do not become daemon.
+Do not become daemon (required on no-MMU systems).
 .SS Server mode: 
 .TP
 .I -s
-Run as the server.
+Run as the server (not available on no-MMU systems).
 .TP
 .I -i
 Run as the inetd server.
@@ -100,6 +103,9 @@ the 'port' option of config file.
 Reconnect to the server after connection termination. By default vtund will
 exit if connection has been terminated. This options is equivalent to 
 the 'persist' option of config file.
+.TP
+.I -q
+Inhibit the printing of connection messages.
 .TP
 .I -m
 Force memory pages to be locked memory-resident to prevent potential VM deadlock.  Useful with NFS traffic.  This option has no config file equivalent.
