--- a/vtunngd.conf.5
+++ b/vtunngd.conf.5
@@ -278,11 +278,11 @@ AES cipher, 256 bit key, mode GCM (experimental)
 .RE
 .IP
 This option is ignored by the client.
-.IP \fBrequires\ \fBclient\fR \fBbidirauth\fR \fBencryption\fR \fBintegrity\fR \fB"3.1"\fR (experimental)
+.IP \fBrequires\ \fBclient\ \fBbidirauth\ \fBencryption\ \fBintegrity\ \fB"3.1"\ (experimental)\fR
 set requirements for the connection. This is specifically for the client where
 you can set requirements for what configuration it will accept from the client.
 Multiple requirements can be specified. For now this is experimental.
-.IP \fBaccept_encrypt\ \fB<encryption-algo>\fR (experimental)
+.IP \fBaccept_encrypt\ \fB<encryption-algo>\ (experimental)\fR
 This accepts the same algorithms as the 'encrypt' keyword. This can be used
 to set up an allowlist of encryption algorithms that the client will accept.
 Multiple algorithms can be specified, also multiple accept_encrypt statements
