Option to override the pidfile.

--- a/vtunngd.8
+++ b/vtunngd.8
@@ -76,6 +76,11 @@ Read config information from the
 .I file
 (full path required). By default vtund uses /etc/vtund.conf
 .TP
+.I -z file
+Write pid to the file
+.I file
+(full path required).
+.TP
 .I -n 
 Do not become daemon (required on no-MMU systems).
 .SS Server mode: 
