Add AES-GCM-SIV modes (aes128gcmsiv, aes256gcmsiv).

--- a/vtunngd.conf.5
+++ b/vtunngd.conf.5
@@ -275,6 +275,10 @@ AES cipher, 256 bit key, mode OFB
 AES cipher, 128 bit key, mode GCM (experimental)
 .IP \fBaes256gcm\fR
 AES cipher, 256 bit key, mode GCM (experimental)
+.IP \fBaes128gcmsiv\fR
+AES cipher, 128 bit key, mode GCM-SIV (experimental)
+.IP \fBaes256gcmsiv\fR
+AES cipher, 256 bit key, mode GCM-SIV (experimental)
 .RE
 .IP
 This option is ignored by the client.
