Document chacha20poly1305.

--- a/vtunngd.conf.5
+++ b/vtunngd.conf.5
@@ -279,6 +279,8 @@ AES cipher, 256 bit key, mode GCM (experimental)
 AES cipher, 128 bit key, mode GCM-SIV (experimental)
 .IP \fBaes256gcmsiv\fR
 AES cipher, 256 bit key, mode GCM-SIV (experimental)
+.IP \fBchacha20poly1305\fR
+Chacha20 cipher (Aes256 for initialization), 256 bit key, poly1305 message authentication (experimental)
 .RE
 .IP
 This option is ignored by the client.
